  - Fixes issue with {content_image urlonly=1 ...} and the assign param
  - Fixes to the RedirectToAdminTab stuff
  - Fixes thumbnail creation stuff to do some file extension checking
  - Missing button "View in English" in OneEleven theme
  - Minor adjustment to page template parsing to detect <head instead of <head>
  
MenuManager
  - Fixes minor expression issue wrt the show_all parameter in the breadcrumb action

FileManager
  - Minor adjustments to the savesettings action.
  - Fixes for advanced mode.
  - File upload now places a note in the admin log.

News
  - Minor fixes.
  - fesubmit action now documented as deprecated
  - Minor fesubmit fix.
  - fesubmit action is now officially deprecated and won't receive much love in the future.
  - Adds a new preference (on by default) that indicates if expired articles should be viewable in detail view.


Version 1.11.1 - Baltra
-----------------------------
Core - General:
  - Minor fix to the GetChildren method when loading properties of inactive page
  - Fixes to smarty error_eporting. Should now listen to the PHP error level
  - Minor typo fix
  - Fix an issue with {content wysiwyg=false}
  - Fixing typo in CmsNlsOperations. Admin and Frontend has now own separated language detection spots. Language detector class now works as it should
  - Fix problem with links in notifications generated by modules and the GatherNotifications task
  - Minor fix to notice for module generated content blocks.
  - Fixes the {content_image} tag.
  - prefilters and postfilters can now be displayed in the listtags admin page.
  - Fixes to the get_called_class() method wrt php 5.2
  - Fixes expression for caching of UDT's
  - {content_image} and {content_module} will now generate errors if a block param is not specified.
  - Fixes issue with addtemplate & edittemplate smarty fetching process, now using own compile id for temporal template data.  