@@ -361,20 +361,14 @@ header("Content-Language: " . CmsNlsOperations::get_current_language());
 
 //CHANGED
 debug_buffer('debug is:' . $error);
-$themeName = CmsAdminThemeBase::GetDefaultTheme();
-$themeObject = CmsAdminThemeBase::GetThemeObject($themeName);
+
+$themeObject = cms_utils::get_theme_object();
 
 $vars = array('error'=>$error);
 if( isset($warningLogin) ) $vars['warningLogin'] = $warningLogin;
 if( isset($acceptLogin) ) $vars['acceptLogin'] = $acceptLogin;
 if( isset($changepwhash) ) $vars['changepwhash'] = $changepwhash;
 $themeObject->do_login($vars);
-// if (file_exists(dirname(__FILE__)."/themes/$theme/login.php")) {
-// 	include(dirname(__FILE__)."/themes/$theme/login.php");
-// } else {
-// 	include(dirname(__FILE__)."/themes/default/login.php");
-// }
-//STOP
 ?>
 
 <?php
